# saasapp

./: .coveragerc  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitignore  .pylintrc  .travis.yml  Dockerfile  README.md  babel.config.json  dev.yml  fabfile.py  karma.conf.js  package-lock.json  package.json  pyproject.toml  tox.ini  tsconfig.json  webpack.config.js
.github/workflows/: pylint.yml
config/: urls.py  webpack.base.config.js  webpack.development.config.js  webpack.production.config.js  webpack.test.config.js  wsgi.py
config/settings/: common.py  development.py  production.py  test.py
docker/caddy/: Caddyfile
docker/django/: Dockerfile  Dockerfile-dev  entrypoint.sh
docker/node/: Dockerfile
docker/postgres/: Dockerfile
requirements/: base.txt  development.txt  production.txt  test.txt
saas-app-react/: README.md  index.js  index.tsx  routes.tsx
saas-app-react/components/: App.js  App.tsx
saas-app-react/containers/: DevTools.js  DevTools.tsx  UserApp.js
saas-app-react/definitions/: custom.d.ts
saas-app-react/store/: configureStore.js  configureStore.ts
saas_app/: views.py
saas_app/api/: urls.py
saas_app/app/: urls.py
saas_app/beta/: admin.py  forms.py  models.py  urls.py  views.py
saas_app/blog/: admin.py  models.py  urls.py  views.py
saas_app/models/: base.py
saas_app/payments/: defaults.py  plan.py  tasks.py  urls.py  views.py
saas_app/taskapp/: celery.py
saas_app/templates/: base.html  site_base.html  site_blank_base.html  site_footer.html
saas_app/users/: __init__.py  adapters.py  admin.py  apps.py  (+6 more)
(+51 files in other folders)
