
[tool.poetry]
name = "saas_app"
version = "0.1.0"
description = ""
authors = ["Angel Vargas <angelhvargasv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
